stop point for 7-13-19

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -54,9 +54,10 @@ body {
     border-style: solid;
 }
 
-#checkbox {
-    padding: 70px 0;
-    align-content: center;
+.checkbox {
+    vertical-align: middle;
+    // padding-top: 50px;
+    // text-align: center
 }
 
 li {
