--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -4,71 +4,70 @@
 
 @import '~bootswatch/dist/spacelab/bootswatch';
 
-@import 'book-list';
 @import 'not-found';
 
-
 body {
-    background-image: url(../assets/img/paper.png);
+  background-image: url(../assets/img/paper.png);
 }
 
 .jumbotron {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    height: 17.875rem;
-    padding: 0;
-    position: relative;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  height: 17.875rem;
+  padding: 0;
+  position: relative;
 
-    .background-image {
-        background-image: url(../assets/img/40_LW_v2_OBJ_FILE_2018-Jun-21_06-11-29PM-000_CustomizedView20269219871-e1529605675650.png);
-        background-position: 50%;
-        background-repeat: no-repeat;
-        background-size: 50%;
-        height: 100%;
-        background-color: #fff;
-    }
+  .background-image {
+    background-image: url(../assets/img/40_LW_v2_OBJ_FILE_2018-Jun-21_06-11-29PM-000_CustomizedView20269219871-e1529605675650.png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    height: 100%;
+    background-color: #fff;
+  }
 
-    .overlay {
-        background: rgba(0, 0, 0, 0.5);
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: auto;
-    }
+  .overlay {
+    background: rgba(0, 0, 0, 0.5);
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: auto;
+  }
 
-    .heading-content {
-        color: #fff;
-        position: absolute;
-        text-align: center;
-        top: 6.25rem;
-        width: 100%;
-    }
+  .heading-content {
+    color: #fff;
+    position: absolute;
+    text-align: center;
+    top: 6.25rem;
+    width: 100%;
+  }
 
-    h1, h2 {
-        color: #fff;
-    }
+  h1,
+  h2 {
+    color: #fff;
+  }
 }
 
 .checkList {
-    border-style: solid;
-    padding: 20px
+  border-style: solid;
+  padding: 20px;
 }
 
 .checkbox {
-    vertical-align: middle;
-    // padding-top: 50px;
-    // text-align: center
+  vertical-align: middle;
+  // padding-top: 50px;
+  // text-align: center
 }
 
 li {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .checklistComment {
-    padding: 10px;
+  padding: 10px;
 }
 .btn {
-    font-variant: small-caps;
-    text-transform: uppercase;
+  font-variant: small-caps;
+  text-transform: uppercase;
 }
